# mvHyperion

./: .clang-format  .gitignore  Makefile  README.md  dkms.conf
src/: Makefile.mvHYPERION
src/common/: DMACtrl.c  DMACtrl.h  i2c_access.c  i2c_access.h  ksemaphore.c  ksemaphore.h  spi_access.c  spi_access.h  spi_access_regs.h
src/common/Hyperion/: DigitalIO.c  DigitalIO.h  HyperionConst.h  HyperionEeprom.h  HyperionIoCtlCommon.h  HyperionProp.h  HyperionRegister.h  HyperionRegisterAccess.h  HyperionVendorDeviceID.h  PoCLControl.c  PoCLControl.h  clf_ioctl.h  common_ioctl.h  external_boot.c  external_boot.h  hyperion_dma_nios.h  hyperion_register_a32.h  hyperion_register_a64.h  hyperion_register_cl4e.h  hyperion_register_hdsdi_4e.h  i2c_register.h  property.h  serialport_ioctl.h  uart_read_write.c  uart_read_write.h
src/linux/: Makefile.mvHYPERION
src/linux/Hyperion/: HyperionIoCtl.h  Makefile  Makefile.in  cle_ioctl.h  configure.ac  device_func.c  device_func.h  device_queue.c  device_queue.h  hyperion.h  hyperion_defs.h  hyperionmain.c  ioctl_hyperion.h  pipe.h  read_write.c  read_write.h  read_write_direct.c  read_write_direct.h  uart_read_write.c  uart_read_write.h
src/linux/Hyperion2/: Makefile  Makefile.in  clf_func.c  clf_func.h  configure.ac  dma_sg_list_buffer.c  dma_sg_list_buffer.h  drivermain.c  drivermain.h  hyperion_base.c  hyperion_base.h  iocontrol.c  iocontrol.h  read_write.c  read_write.h  user_buffer.c  user_buffer.h  utils.h
src/linux/HyperionGeneric/: Makefile  Makefile.in  Makefile.mvHYPERION  configure.ac  hyperion_generic_main.c
src/linux/common/: device_queue.c  device_queue.h  hyperion_generic.h  kcompat.c  kcompat.h  matrix_tools.c  matrix_tools.h  matrix_types.h  mv_kconfig.h  mv_kconfig.h.in  stamp-h1  utils.c
